--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <button><img class = "imgbtn" src="imgs/blue_t.png" alt="tshirt"></button>
       <button><img class = "imgbtn" src="imgs/blue_p.png" alt="pants"></button>
       <button><img class = "imgbtn" src="imgs/blue_s.png" alt="skirt"></button>
-      <button class = "colorBtn Blue">Blue</button>
-      <button class = "colorBtn Yellow">Yellow</button>
-      <button class = "colorBtn Pink">PInk</button>
+      <button class = "colorbtn blue">Blue</button>
+      <button class = "colorbtn yellow">Yellow</button>
+      <button class = "colorbtn pink">PInk</button>
     </nav>
 
     <!--ITEM LIST-->
