--- a/index.html
+++ b/index.html
@@ -18,20 +18,17 @@
 
     <!--BUTTON MENU-->
     <nav class="menu">
-      <button><img class = "imgbtn" src="imgs/blue_t.png" alt="tshirt"></button>
-      <button><img class = "imgbtn" src="imgs/blue_p.png" alt="pants"></button>
-      <button><img class = "imgbtn" src="imgs/blue_s.png" alt="skirt"></button>
-      <button class = "colorbtn blue">Blue</button>
-      <button class = "colorbtn yellow">Yellow</button>
-      <button class = "colorbtn pink">PInk</button>
+      <button ><img data-key = "type" data-value = "tshirt" class = "imgbtn" src="imgs/blue_t.png" alt="tshirt"></button>
+      <button ><img data-key = "type" data-value = "pants" class = "imgbtn" src="imgs/blue_p.png" alt="pants"></button>
+      <button><img data-key = "type" data-value = "skirt" class = "imgbtn" src="imgs/blue_s.png" alt="skirt"></button>
+      <button data-key = "color" data-value = "blue" class = "colorbtn blue">Blue</button>
+      <button data-key = "color" data-value = "yellow" class = "colorbtn yellow">Yellow</button>
+      <button data-key = "color" data-value = "pink" class = "colorbtn pink">PInk</button>
     </nav>
 
     <!--ITEM LIST-->
     <ul class="items">
-      <li class="item">
-        <img src="imgs/blue_t.png" alt="" class="thumbnail-img">
-        male large size
-        </li>
+
         
     </ul>
 
